--- a/hawelli/index.html
+++ b/hawelli/index.html
@@ -133,8 +133,8 @@ html { overflow-x: hidden; }
 .hero {
   background: linear-gradient(135deg, var(--deep), var(--primary), var(--accent));
   color: #fff;
-  padding: 120px 20px 80px;
-}
+  padding: 120px 20px 40px; /* reduced bottom padding so features section moves up */
+} 
 
 .hero-container {
   max-width: 1200px;
@@ -201,8 +201,8 @@ html { overflow-x: hidden; }
 section {
   max-width: 1200px;
   margin: auto;
-  padding: 90px 20px;
-}
+  padding: 60px 20px; /* pulled up slightly for better vertical balance */
+} 
 
 h2 {
   text-align: center;
@@ -260,15 +260,16 @@ h2 {
 .footer {
   background: linear-gradient(135deg, #1f2bff, #4F6BFF);
   color: #fff;
-  padding: 80px 20px 30px;
+  padding: 48px 20px 18px; /* smaller footprint */
+  margin-top: 18px;
 }
 
 .footer-container {
   max-width: 1200px;
   margin: auto;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-  gap: 40px;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  gap: 28px; /* tightened column gap */
 }
 
 .footer-container a {
@@ -282,13 +283,22 @@ h2 {
 }
 
 .footer-bottom {
-  margin-top: 40px;
+  margin-top: 14px; /* reduced gap */
   text-align: center;
-  opacity: 0.85;
+  opacity: 0.95;
+  font-size: 0.94rem;
+  line-height: 1.4;
 }
+
+/* lift footer headings/text slightly */
+.footer h3 { margin: 0 0 8px 0; }
+.footer p { margin: 4px 0; }
+.footer img { margin-top: 6px; } 
 
 /* RESPONSIVE */
 @media (max-width: 900px) {
+  .hero { padding: 80px 12px 28px; } /* bring hero bottom up on mobile */
+
   .hero-container {
     grid-template-columns: 1fr;
     text-align: center;
@@ -296,6 +306,9 @@ h2 {
   .features {
     grid-template-columns: 1fr;
   }
+
+  /* slightly reduce section top padding on mobile so heading appears higher */
+  section { padding-top: 36px; }
 
   .phone::before { display: none; }
   .phone img.mockup.small { display: none; }
@@ -305,6 +318,11 @@ h2 {
     height: 460px;
     border-radius: 36px;
   }
+
+  /* compact footer on mobile */
+  .footer { padding: 36px 14px 16px; margin-top: 14px; }
+  .footer-container { gap: 16px; }
+  .footer-bottom { margin-top: 10px; font-size: 0.9rem; }
 }
 
 html[dir="ltr"] .phone::before {
