--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                             <!-- Main image container with modern styling -->
                             <div class="relative w-full h-full bg-white rounded-full flex items-center justify-center overflow-hidden shadow-2xl p-1 transition-all duration-500 hover:scale-105 hover:shadow-primary-500/30 hover:shadow-3xl">
                                 <!-- Image with modern effects -->
-                                <img src="assets/images/zaho-logo.png" 
+                                <img src="assets/images/zahopic1.png" 
                                     alt="Zaho Digital Solutions"
                                     class="w-17 h-17 object-cover rounded-full p-2 animate-fade-in-up"
                                     style="animation-delay: 0.3s;">
@@ -702,7 +702,7 @@
                     data-i18n="solutions.subtitle">حلولنا المالية تلبي احتياجات مختلف القطاعات</p>
             </div>
 
-            <div class="max-w-6xl mx-auto grid md:grid-cols-2 lg:grid-cols-4 gap-6">
+            <div class="max-w-6xl mx-auto grid grid-cols-2 md:grid-cols-2 lg:grid-cols-4 gap-4 sm:gap-6">
                 <!-- Individuals -->
                 <div
                     class="bg-gradient-to-br from-primary-50 to-white dark:from-primary-900/20 dark:to-gray-800 p-8 rounded-3xl shadow-lg text-center card-hover">
@@ -772,7 +772,7 @@
             <div class="max-w-6xl mx-auto">
                 <div class="grid lg:grid-cols-2 gap-12">
                     <!-- Contact Form -->
-                    <div class="bg-white dark:bg-gray-700 p-6 rounded-2xl shadow-xl">
+                    <div class="bg-white dark:bg-gray-700 p-6 rounded-2xl shadow-xl order-2 lg:order-1">
                         <h3 class="text-xl font-bold mb-4 text-gray-800 dark:text-white"
                             data-i18n="contact.sendMessage">أرسل رسالة</h3>
                         <form id="contact-form" class="space-y-4">
@@ -816,7 +816,7 @@
                     </div>
 
                     <!-- Contact Information -->
-                    <div class="space-y-6">
+                    <div class="space-y-6 order-1 lg:order-2">
                         <!-- Info Card -->
                         <div
                             class="bg-white dark:bg-gray-700 p-8 rounded-3xl shadow-2xl border border-gray-100 dark:border-gray-600">
